--- a/invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -5,7 +5,12 @@ appDescription=Invoices List
 
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
+helloDialogBut=Say hello Dialog
+dialogCloseBut=Ok
+helloDialogHeader=Hello Header
 
 #Panels
 helloPanel=Hello Panel
+panelFrTitle=Fragment Form
+labelPerson=Name
 
