--- a/invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -14,3 +14,10 @@ helloPanel=Hello Panel
 panelFrTitle=Fragment Form
 labelPerson=Name
 
+#Invoices
+invoiceListTitle=Invoices
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
+
+
