--- a/invoices/SAPUI5/webapp/i18n/i18n.properties
+++ b/invoices/SAPUI5/webapp/i18n/i18n.properties
@@ -23,4 +23,9 @@ invoiceStatusC=Done
 #Details
 detailPageTitle=Details Title
 
-
+#Product Rating
+productRatingIndicator=Your rating: {0} out of {1}
+productRatingLabelInitial=Please rate this product
+productRatingButton=rate
+productRatingLabelFinal=Thank you for your rating!
+ratingConfirmation=You have rated this product with {0} stars
